# RandomCatch

./: .gitignore  README.md  config.py  data.csv  datanew.csv  db.py  discordbot.py  game.py  inventories.py  inventory.db  items.py  last_spawn.json  logic.py  main.py  models.py  pyproject.toml  reader.py  requirements.txt  roles.json  spawn_rules.json  start.sh  todo.txt  token  utils.py
cogs/: admin.py  catching.py  inventory.py
tests/: test_db.py  test_game.py  test_items.py  test_models.py  test_permissions.py  test_utils.py
