[project]
name = "RandomCatch"
version = "1.0"
description = "A Discord bot that allows users to catch math objects that randomly appear in designated channels."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "audioop-lts>=0.2.1",
    "py-cord[voice]>=2.6.1",
]
